--- a/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
@@ -60,4 +60,80 @@
     margin-left: 105px;
     width: 115px;
   }
+
+
+  .rating{
+    border: none;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+
+    > input {
+      position:absolute;
+      top:-9999px;
+      clip:rect(0,0,0,0);
+    }
+
+    &.editable > label:hover, &.editable > label:hover ~ label, > input:checked ~ label  {
+      background: url(images/app/new-stars.png) 0 0 no-repeat;
+    }
+
+    > label {
+      float:right;
+      cursor:pointer;
+      width: 20px;
+      height: 20px;
+      background: url(images/app/new-stars.png) -20px 0 no-repeat;
+    }
+
+    &.editable > label:active{
+      position:relative;
+      top:2px;
+      left:2px;
+    }
+  }
+
+
+  .rating-persons{
+    p{
+      margin: 15px 0 5px;
+      word-wrap: break-word;
+      font-size: 15px;
+    }
+
+    .rating-person-item{
+      margin-bottom: 25px;
+
+      p{
+        margin-top: 0 !important;
+      }
+    }
+
+  }
+
+  .rating-roles{
+    display: table;
+    margin-bottom: 15px;
+    padding-left: 20px;
+    font-size: 13px;
+    font-weight: bold;
+
+    .rating-role-item{
+      display: table-row;
+
+      >DIV{
+        display: table-cell;
+        vertical-align: middle;
+        &.rolename{
+          min-width: 100px;
+        }
+
+        &.personcount{
+          width: 50px;
+          text-align: center;
+          font-size: 11px;
+        }
+      }
+    }
+  }
 }
