--- a/Chalkable.Web/assets/jade/controls/action-link.jade
+++ b/Chalkable.Web/assets/jade/controls/action-link.jade
@@ -31,6 +31,7 @@ mixin  ActionLinkButton(controller, action)
             span
                 link = self.getLink(ria.__API.clone(arguments))
                 -attributes.href=attributes.href || 'javascript:'
+                -delete attributes.class
                 -attributes['data-link'] = link
-                a.action-link(attributes)
+                a.action-link(attributes).not-blue
                     block
