--- a/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
@@ -11,6 +11,49 @@ $red-color: #842727;
     @include border-radius(7px 7px 0 0);
   }
 
+  .grid-modal{
+    position: absolute;
+    background: url(images/announcement/auto-grade-modal.png) 438px 5px no-repeat, rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+
+    >DIV{
+      color: white;
+      width: 290px;
+      position: absolute;
+      font: normal 34px 'Reenie Beanie';
+      text-align: center;
+      top: 83px;
+      left: 293px;
+    }
+
+    &.double{
+      >DIV{
+        top: 1px;
+        left: 105px;
+      }
+    }
+  }
+
+  .z-0, .z-10{
+    position: relative;
+  }
+
+  .z-0{
+    z-index: 0;
+  }
+
+  .z-10{
+    z-index: 10;
+
+    &.selected{
+      z-index: 11;
+    }
+  }
+
   .attach-file-area{
     .file{
       margin-top: 25px;
@@ -214,6 +257,8 @@ $red-color: #842727;
     }
 
     .grades-individual{
+      position: relative;
+
       .attachments-container{
         display: none;
 
