--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
@@ -49,6 +49,7 @@ DIV.page {
                   color: white;
                   background: none;
                   line-height: 45px;
+                  display: inline-block;
 
                 }
               }
