started working on ListForWeek Calendar

--- a/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
@@ -13,3 +13,4 @@
             +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardStudent').one-third-button.settings(title="View Settings") Settings
++ListForWeekCalendar()
