--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -16,3 +16,4 @@
         .buttons-row
             +ActionLink('attendance', 'summary').one-third-button.attendance(title="View Attendance") Attendance
             +ActionLink('discipline', 'list').one-third-button.discipline(title="View Discipline") Discipline
++ListForWeekCalendar()
