--- a/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
@@ -17,3 +17,4 @@
         .buttons-row
             +ActionLink('attendance', 'summary').one-third-button.attendance(title="View Attendance") Attendance
             +ActionLink('discipline', 'list').one-third-button.discipline(title="View Discipline") Discipline
++ListForWeekCalendar()
