fixed write reviews

--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
@@ -7,3 +7,19 @@ mixin AppMarketToolbar(balance, categories, gradelevels)
             +ActionForm('', '')
                 +SearchBox(chlk.services.AppMarketService, "getAppsByFilter", chlk.templates.apps.AppMarketSearchBoxTpl)#app-market-searchbox(name="appMarketSearch")
                 button(type="submit").search-btn
+
+
+
+mixin Rating(elemId, value, isEditable)
+    fieldset.rating(class = isEditable ? "editable" : undefined)(attributes)
+        items = [5, 4, 3, 2, 1]
+        each item in items
+            input(
+                type = "radio",
+                id = "#{elemId + item}",
+                value = item,
+                name = elemId,
+                disabled = !isEditable ? "disabled" : undefined,
+                checked = value == item ? "checked" : undefined
+                )
+            label(for="#{elemId + item}")
