fixed teacher attendance page

--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -3,7 +3,7 @@
     topItems = topData.getTopItems()
     selectedId = topData.getSelectedItemId()
     valuesEnum = chlk.models.attendance.AttendanceTypeEnum
-    additionalParams = self.getAdditionalParams
+    additionalParams = self.getAdditionalParams()
     if(self.hasLeftRightToolBar())
         +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
             selectedItemId=selectedId ? selectedId.valueOf() : ""
