--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekCalendarBody.jade
@@ -22,7 +22,7 @@
                                 anns = announcementPeriod.getAnnouncements();
                                 if anns.length == 1
                                     li
-                                        .announcement-item
+                                        .announcement-calendar-item
                                             .course-icon
                                                 img
                                             .text-container
