--- a/Chalkable.Web/assets/jade/controls/carousel.jade
+++ b/Chalkable.Web/assets/jade/controls/carousel.jade
@@ -5,8 +5,10 @@ mixin Carousel()
             ul
                 block
 
-            .carousel-pagination
 
+            .picture-button.picture-left.disabled
+            .picture-button.picture-right
+    .carousel-pagination
 
 
 mixin CarouselItem()
