--- a/Chalkable.Web/assets/jade/activities/notification/ListNewPopup.jade
+++ b/Chalkable.Web/assets/jade/activities/notification/ListNewPopup.jade
@@ -15,9 +15,10 @@
                 if item.getType() == chlk.models.notification.NotificationTypeEnum.ANNOUNCEMENT
                     .notification-announcement
                         +ActionLink('announcement', 'view', item.getAnnouncementId().valueOf())#notification-action
-                            div(class="announcement-type-" + item.getAnnouncementType()).icon.blue.image
+                            div(class="announcement-type-" + item.getAnnouncementType()).icon.blue
                         span= item.getAnnouncementTypeName()
 
             div(class=item.isShown()? 'content' : 'content unshown')
                 .inner-content!= item.getMessage()
-    +ActionLink('notification', 'listByDays') See All Notifications
+            div(class=self.convertNotificationTypeToStyleName(item)).small-icon.time=item.getCreatedTime()
+    +ActionLink('notification', 'listByDays').see-all-link See All Notifications
